# SSBot

./: .env.example  .gitignore  JM_PORTABLE_ARCH.md  JM_SEARCH_FLOW.md  README.md  bot.py  pyproject.toml  test.py  test_extract.py  test_extract_keyword.py
funcTest/: testTemp.py  tic_tac_toe.py
scripts/: fetch_cards_chs.py
src/plugins/get_group_info/: get_group_info.py  say_my_name.py
src/plugins/interactive_help/: README.md  __init__.py  _builder.py  _config.py  _handler.py  _models.py  _permission.py  _router.py  _utils.py
src/plugins/interactive_help/data/: help_menu.yaml
src/plugins/jm_downloader/: __init__.py  config.py
src/plugins/jm_downloader/builders/: message_formatter.py
src/plugins/jm_downloader/data/: jmcomic_options.yml
src/plugins/jm_downloader/handlers/: command_jm.py  command_search.py
src/plugins/jm_downloader/models/: comic_data.py
src/plugins/jm_downloader/services/: jm_api.py  jm_downloader.py  state_manager.py
src/plugins/plugin_jmcomic/: main.py
src/plugins/plugin_jmcomic/config/: settings.py
src/plugins/plugin_jmcomic/core/: downloader.py  uploader.py
src/plugins/plugin_jmcomic/models/: task.py
src/plugins/plugin_jmcomic/plugins/: jmcomic_plugin.py
src/plugins/plugin_jmcomic/utils/: logger.py
src/plugins/plugin_nonebot_jmcomic/: my_jmcomic_plugin.py  option.yml
src/plugins/plugin_nonebot_rand_qinghua/: rand_qinghua.py
src/plugins/sv_card/: README.md  __init__.py  _cache.py  _config.py  _formatter.py  _handler.py  _searcher.py
src/plugins/tic_tac_toe/: _model.py  tic_tac_toe.py
