[project]
name = "SSbot"
version = "0.1.0"
description = "SSbot - 基于 NoneBot2 的 QQ 群聊机器人，支持 JM 漫画搜索下载"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "jmcomic>=2.7.0",
    "img2pdf>=0.5.0",
    "pyyaml>=6.0",
]

[tool.nonebot]
adapters = [
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
